# st_happens

./: .gitignore  AGENTS.md  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  SPEC.md  initial_spec.md  pyproject.toml  ralph_loop.sh  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
outputs/: comparison_h1_a2.json  comparison_h1_a2.md  ocr_test_claude_results.json
outputs/session_results/: session_1.json  session_10.json  session_11.json  session_12.json  session_13.json  session_14.json  session_2.json  session_4.json  session_5.json  session_6.json  session_8.json  session_9.json
plans/: initial_implementation.md
prompts/ralph/: initial_implementation.md
scripts/: fill_missing_scores.py  ocr_test_claude.py  yellow_test.py
src/: __init__.py
src/ai_user/: __init__.py  run.py
src/analysis/: compare.py
src/app/: main.py  pairing.py  session_results.py
src/common/: __init__.py  db.py  models.py  settings.py
src/ingest/: __init__.py  image.py  ocr.py  parser.py  pipeline.py  regions.py  reporting.py  reset_dataset.py  review.py  run_extract.py  storage.py  types.py
src/ranking/: __init__.py  bradley_terry.py  data.py  elo.py  run.py  selection.py  service.py
st_happens/: __init__.py
st_happens/notebooks/: draft.ipynb  (+2 more)
tests/: __init__.py  test_ai_user_m4.py  test_analysis_compare_m5.py  test_app_sessions_m2.py  test_ingest_filename_prefixes.py  test_ingest_m1_validation.py  test_ranking_m3.py  test_st_happens.py
todos/: initial_implementation.md
(+5 files in other folders)
